--- a/web/src/main/resources/templates/product/products.html
+++ b/web/src/main/resources/templates/product/products.html
@@ -19,24 +19,9 @@
 		});
 		
 		$('.addCart').click(function() {
-			var id = $(this);
-			var product = id.attr("data-id");
-			$.ajax({
-				type : 'POST',
-				url : "/ajax/cart",
-				data:{'productId':product,'number':1},
-				success : function(data){
-					if(data=="login")
-						window.location.href="/login";
-					else if(data=="success")
-						alert(data);
-					else
-						alert(data);
-				},
-				error : function(data){ 
-					alert(data);
-				}
-			});
+			var obj = $(this);
+			var product = obj.attr("data-id");
+			createCart(1,product);
 		});
 		function coll(productId){
 			$.ajax({
