--- a/web/src/main/resources/templates/user/provider/count.html
+++ b/web/src/main/resources/templates/user/provider/count.html
@@ -19,9 +19,9 @@
 			<div class="gray-hd"><a class="blue">个人中心</a></div>
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
-					<a href="/provider/detail">个人资料</a>
+					<a href="/supplier/detail">个人资料</a>
 					<a href="/provider/products?form">发布商品</a>
-					<a href="/provider/products/ALL">商品维护</a>
+					<a href="/provider/products">商品维护</a>
 					<a class="active">商品信息统计</a>
 				</div>
 				<div class="mainpanel fr">					
