--- a/web/src/main/resources/templates/user/provider/modifyProduct.html
+++ b/web/src/main/resources/templates/user/provider/modifyProduct.html
@@ -103,7 +103,7 @@
 			<div class="gray-hd"><a class="blue">个人中心</a></div>
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
-					<a href="/provider/detail">个人资料</a>
+					<a href="/supplier/detail">个人资料</a>
 					<a href="/provider/products?form">发布商品</a>
 					<a class="active" href="/provider/products">商品维护</a>
 					<a href="/provider/count">商品信息统计</a>
@@ -183,7 +183,7 @@
 						</div>
 						<div class="form-group">
 							<div class="fl">
-							<label><i>*</i>标签</label>							
+							<label>标签</label>							
 							<input type="text" class="w630" th:field="*{label}"/>
 							<i class="error" th:if="${#fields.hasErrors('label')}" th:errors="*{label}"></i>
 							</div>
