--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -11,6 +11,17 @@
 <script th:src="@{/js/jquery-min.js}"></script>
 <script th:src="@{/js/script.js}"></script>
 <script th:src="@{/js/province.js}"></script>
+<script type="text/javascript">
+            $(function() {
+                var token = $("meta[name='_csrf']").attr("content");
+                var header = $("meta[name='_csrf_header']").attr("content");
+                var id = $("meta[name='id']").attr("content");
+
+                $(document).ajaxSend(function(e, xhr, options) {
+                    xhr.setRequestHeader(header, token);
+                });
+            });
+</script>
 </head>
 <body>
 	<div class="header">
