--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -122,7 +122,7 @@
 			</div>
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
-					<a href="/provider/detail">个人资料</a> <a class="active">发布商品</a> <a
+					<a href="/supplier/detail">个人资料</a> <a class="active">发布商品</a> <a
 						href="/provider/products">商品维护</a> <a href="/provider/count">商品信息统计</a>
 				</div>
 				<div class="mainpanel bodr basic-info push-good fr">
@@ -202,7 +202,7 @@
 						</div>
 						<div class="form-group">
 							<div class="fl">
-								<label><i>*</i>标签</label> <input type="text" class="w630"
+								<label>标签</label> <input type="text" class="w630"
 									th:field="*{label}" /> <i class="error"
 									th:if="${#fields.hasErrors('label')}" th:errors="*{label}"></i>
 							</div>
