--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -39,9 +39,9 @@
 		</div>
 		<div class="head-box clearfix">
 			<a href="#" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
-			<div class="head-menu-btn logo-menu">
-				<a class="self-btn" href="/signup?user"></a>
-				<a class="company-btn" href="/signup?provider"></a>
+			<div class="head-menu-btn resg-company">
+				<a href="/signup?user" class="self-btn"></a>
+				<a href="/signup?provider" class="company-btn"></a>
 			</div>
 		</div>
 	</div>
