--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -1,5 +1,6 @@
 	<div class="header">
 		<div class="head-box clearfix">
+		<script type="text/javascript" th:src="@{/js/script.js}"></script>
 			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 			<div class="head-search">
 				<span class="searched">商品</span>
