--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
 <title>首页</title>
+	<meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" />
 <script th:src="@{/js/jquery-1.11.2.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
