--- a/web/src/main/resources/templates/user/provider/count.html
+++ b/web/src/main/resources/templates/user/provider/count.html
@@ -25,7 +25,7 @@
 					<a class="active">商品信息统计</a>
 				</div>
 				<div class="mainpanel fr">					
-					<table class="save-table change-color">
+					<table class="save-table change-color" style="width: 100%;">
 						<thead>
 							<tr>
 								<th>上架日期</th>
