--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript"  th:src="@{/js/jquery.fileupload.js}"></script>
 	<script type="text/javascript" th:src="@{/js/province.js}"></script>
 	<script type="text/javascript" th:src="@{/js/validata_signup.js}"></script>
+	<script type="text/javascript" th:src="@{/js/script.js}"></script>
 	
 	<script type="text/javascript">
 		$(function() {
