--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -50,12 +50,12 @@
 									<div class="fl">
 										<div class="form-group">
 											<label>企业名称（中文）</label>
-											<input type="text" th:field="*{companyNameChina}" disabled="disabled" />	
+											<input type="text" th:field="*{companyNameChina}" readonly="readonly"/>	
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label>企业名称（英文）</label>
-											<input type="text" th:field="*{companyNameEnglish}" disabled="disabled"/>									
+											<input type="text" th:field="*{companyNameEnglish}" readonly="readonly"/>									
 											</div>
 										</div>
 										<div class="form-group">
@@ -174,19 +174,19 @@
 										<div class="form-group">
 											<div class="fl">
 											<label>注册邮箱</label>
-											<input type="text" th:field="*{email}" disabled="disabled"/>
+											<input type="text" th:field="*{email}" readonly="readonly"/>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label>注册用户名</label>
-											<input type="text" th:field="*{name}" disabled="disabled"/>
+											<input type="text" th:field="*{name}" readonly="readonly"/>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label>手机号</label>
-											<input type="text" th:field="*{phone}" disabled="disabled"/>	
+											<input type="text" th:field="*{phone}" readonly="readonly"/>	
 											</div>
 										</div>
 										<div class="form-group">
