--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -40,25 +40,27 @@
 					<div class="mainpanel bodr fr">
 				<div class="pdf " th:object="${buy}">
 						<h2>
-							<i th:text="${user.company}"></i>采购方单位-物资(外包服务)申购单
+							<i th:text="${buy.user.company}"></i>采购方单位-物资(外包服务)申购单
 						</h2>
 						<div>
 						</div>
 						<div class="orders-form">
 							<form th:object="${buy}" method="post">
 								<div class="form-group">
-									<label>申请单位</label> <input type="text" th:value="${user.company}" disabled="disabled" style="width: 233px;"/> 
-									<label>行业</label><input type="text" th:value="${user.industryInfo.name}" disabled="disabled" style="width: 233px;"/> 
+									<label>申请单位</label> <input type="text" th:value="${buy.user.company}" disabled="disabled" style="width: 233px;"/> 
+									<label>行业</label><input type="text" th:value="${buy.user.industryInfo.name}" disabled="disabled" style="width: 233px;"/> 
 								</div>
 								<div class="form-group">
-									<label>申请部门</label> <input type="text" th:value="${user.department}" disabled="disabled" style="width: 233px;"/>
-									<label>申请人</label> <input type="text" th:value="${user.realName}" disabled="disabled" style="width: 233px;"/>
+									<label>申请部门</label> <input type="text" th:value="${buy.user.department}" disabled="disabled" style="width: 233px;"/>
+									<label>申请人</label> <input type="text" th:value="${buy.user.realName}" disabled="disabled" style="width: 233px;"/>
 								</div>
 								<div class="form-group">
 									<label>经费类别</label><input type="text" class="w635" th:field="*{fundCategory}"/>
+									<i class="error" th:if="${#fields.hasErrors('fundCategory')}" th:errors="*{fundCategory}">必填</i>
 								</div>
 								<div class="form-group">
 									<label>项目名称</label><input type="text" class="w635" th:field="*{name}" />
+									<i class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">必填</i>
 								</div>
 								<table width="90%" class="mauto">
 									<thead>
@@ -66,7 +68,6 @@
 											<th>序号</th>
 											<th>名称</th>
 											<th>型号</th>
-											<th>单位</th>
 											<th>数量</th>
 											<th>小计（元）</th>
 											<th>产地</th>
@@ -77,7 +78,6 @@
 											<td th:text="${cartStat.index+1}">1</td>
 											<td th:text="${cart.name}"></td>
 											<td th:text="${cart.model}"></td>
-											<td th:text="1111"></td>
 											<td th:text="${cart.number}"></td>
 											<td th:text="${cart.count}"></td>
 											<td th:if="${cart.place.toString().toString()=='DOMESTIC'}" th:text="国产"></td>
@@ -93,10 +93,12 @@
 								<div class="form-group">
 									<label>申请理由</label>
 									<textarea class="w635" rows="5" th:field="*{reason}"></textarea>
+									<i class="error" th:if="${#fields.hasErrors('reason')}" th:errors="*{reason}">必填</i>
 								</div>
 								<div class="form-group">
 									<label>期望到货日期</label> 
-									<input class="form-control datepicker" id="arrivalTime" name="arrivalTime" type="text" />
+									<input th:if="${buy.arrivalTime!=null}" class="form-control datepicker" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}" id="arrivalTime" name="arrivalTime" type="text" />
+									<input th:unless="${buy.arrivalTime!=null}" class="form-control datepicker" id="arrivalTime" name="arrivalTime" type="text" />
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 								<button class="btn green mauto">生成完毕</button>
