--- a/web/src/main/resources/templates/product/products.html
+++ b/web/src/main/resources/templates/product/products.html
@@ -75,7 +75,7 @@
 <body>
 
 	<div>
-		<div th:include="@{/head/head}"></div>
+		div th:include="head/head :: head">Head</div>
 	</div>
 	<!-- header -->
 	<div class="wrapper">
