--- a/web/src/main/resources/templates/user/provider/changePassword.html
+++ b/web/src/main/resources/templates/user/provider/changePassword.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div class="header">
-		<div th:include="@{/head/head}"></div>
+		div th:include="head/head :: head">Head</div>
 	</div>
 	<div class="wrapper">
 		<div class="self-wrap">
