--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -85,7 +85,7 @@
 	</head>
 	<body>
 		<div id="includeHeader">
-			div th:include="head/head :: head">Head</div>
+			<div th:include="head/head :: head">Head</div>
 		</div>
 		<!-- header -->
 		<div id="loginForm"></div>
