--- a/web/src/main/resources/templates/user/common/collection.html
+++ b/web/src/main/resources/templates/user/common/collection.html
@@ -44,7 +44,7 @@
 	</head>
 	<body>
 		<div class="header">
-			div th:include="head/head :: head">Head</div>
+			<div th:include="head/head :: head">Head</div>
 		</div>
 		<!-- header -->
 		<div class="wrapper">
