--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div>
-		div th:include="head/head :: head">Head</div>
+		<div th:include="head/head :: head">Head</div>
 	</div>
 	<!-- header -->
 	<div class="wrapper">
