--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 	<div>
-		div th:include="head/head :: head">Head</div>
+		<div th:include="head/head :: head">Head</div>
 	</div>
 	<!-- header -->
 	<div class="wrapper" th:object="${subject}">
