--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 	<div>
-		div th:include="head/head :: head">Head</div>
+		<div th:include="head/head :: head">Head</div>
 	</div>
 	<!-- header -->
 	<div class="wrapper">		
